# rtrs

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: 01-install-and-build.md  02-input-reference.md  03-output-reference.md  04-python-usage.md
docs/schema/: simulation-config.schema.json
examples/: broadband_pyo3.py  broadband_test.py  bty_test.py  create_input.py  linear_ssp_test.py  munk_acoustic_halfspace_test.py  munk_array.py  munk_array_pyo3.py  munk_elastic_lossy_test.py  munk_halfspace_test.py  munk_ray_pyo3.py  munk_test.py  munk_test_pyo3.py  pekeris_test.py  python_utils.py  read_h5_out.py  real_data_test.py  testb.json  testm.json  testp.h5  testp.json
src/: bty.rs  engine.rs  guides.rs  influence.rs  input.rs  lib.rs  main.rs  output.rs  python_bindings.rs  rays.rs  reflect.rs  ssp.rs  utils.rs
