[package]
name = "rtrs"
version = "0.1.0"
edition = "2024"

# [profile.release]
# lto = "fat"        # "thin" or "fat" 
# codegen-units = 1   # best throughput; slower compile
# opt-level = 3       # or "z"/"s" for size-first
# incremental = false 

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hdf5-metno = "0.10.1"
ndarray = { version = "0.16.1", features = ["serde"] }
num-complex = "0.4.6"
