[package]
name = "rtrs"
version = "0.2.2"
edition = "2024"

# [profile.release]
# debug = true
# lto = "fat"        # "thin" or "fat" 
# codegen-units = 1   # best throughput; slower compile
# opt-level = 3       # or "z"/"s" for size-first
# incremental = false 

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_ignored = "0.1"
ndarray = { version = "0.16.1", features = ["serde"] }
num-complex = "0.4.6"
pyo3 = { version = "0.18", optional = true, features = ["extension-module", "auto-initialize"] }
rayon = "1.8"
indicatif = "0.17"

[features]
python = ["pyo3"]

[lib]
crate-type = ["cdylib"]
