[package]
name = "rtrs"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_ignored = "0.1"
ndarray = { version = "0.16.1", features = ["serde"] }
num-complex = "0.4.6"
pyo3 = { version = "0.18", optional = true, features = ["extension-module", "auto-initialize"] }
rayon = "1.8"
indicatif = "0.17"

[features]
python = ["pyo3"]

[lib]
crate-type = ["cdylib", "rlib"]
