[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rtrs"
version = "0.2.1"
description = "Ray tracing acoustic propagation model"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.optional-dependencies]
viz = [
    "numpy>=1.20",
    "matplotlib>=3.5",
    "cmocean>=4.0",
    "plotly>=5.0",
    "dash>=2.0",
]
dev = [
    "maturin>=1.0",
]

[tool.maturin]
features = ["python"]
module-name = "rtrs"
